--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dev_dependencies:
   analyzer: ^0.29.2
   mockito: ^2.0.0
   test: ^0.12.24+1
+  dart_dev: any
+  dart_style: any
 
 transformers:
 - test/pub_serve:
