--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
 language: dart
+sudo: false
+dart:
+  - dev
 dart_task:
-- test: --platform vm
-- test: --platform dartium
-  install_dartium: true
-- dartfmt
+  - test: --platform vm
+  - test: --platform dartium
+	install_dartium: true
+  - dartanalyzer: --strong --fatal-warnings
+  #- dartfmt
+
+#branches:
+#  only: [master]
+#cache:
+#  directories:
+#    - $HOME/.pub-cache
