Playing with travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,13 @@
 language: dart
 sudo: false
-matrix:
-  include:
-    - dart: dev
-      dart_task:
-      - test: --platform vm
-      - test: --platform dartium
-        install_dartium: true
-      - dartanalyzer: --strong --fatal-warnings
-    - dart: stable
-      dart_task:
-      - test: --platform vm
-      - test: --platform dartium
-        install_dartium: true
-      - dartanalyzer: --strong --fatal-warnings
+dart:
+  - dev
+dart_task:
+  - test: --platform vm
+  - test: --platform dartium
+  install_dartium: true
+  - dartanalyzer: --strong --fatal-warnings
+  #- dartfmt
 
 #branches:
 #  only: [master]
