--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,8 @@ dev_dependencies:
   analyzer: ^0.29.2
   mockito: ^2.0.0
   test: ^0.12.24+1
-  dart_dev: any
-  dart_style: any
+  dart_dev: ^1.7.2
+  dart_style: ^1.0.7
   coverage: any
 
 transformers:
