Playing with travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,3 @@
-#language: dart
-#sudo: false
-##dart:
-##- dev
-#dart_task:
-#- analyzer: --strong --fatal-warnings
-#- test: --platform dartium
-#  install_dartium: true
-#script:
-#  - pub run dart_dev coverage --no-html
-#  - bash <(curl -s https://codecov.io/bash) -f coverage/coverage.lcov
-#
-#branches:
-#  only:
-#  - gh-pages
-#  - /.*/
-#
-#cache:
-#  directories:
-#    - $HOME/.pub-cache
 language: dart
 sudo: false
 matrix:
@@ -31,11 +11,11 @@ matrix:
       dart_task:
         analyzer: --strong --fatal-warnings
     - dart: stable
-      deprecated.with_content_shell: true
-      before_install:
-        - export DISPLAY=:99.0
-        - sh -e /etc/init.d/xvfb start
-        - sleep 3
+      #deprecated.with_content_shell: true
+#      before_install:
+#        - export DISPLAY=:99.0
+#        - sh -e /etc/init.d/xvfb start
+#        - sleep 3
       script:
         - pub run dart_dev coverage --no-html
         - bash <(curl -s https://codecov.io/bash) -f coverage/coverage.lcov
