Playing with travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ dart:
 
 dart_task:
 - analyzer: --strong --fatal-warnings
-- test: --platform мь
+- test: --platform vm
 - test: --platform dartium
   install_dartium: true
 
